--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
-PGDATABASE=
-PGUSER=
+PGDATABASE=jeu_des_capitales
+PGUSER=postgres
+# this is the url to acces to your host machine from inside a container
 PGHOST=host.docker.internal
-PGPASSWORD=
+PGPASSWORD=postgres
+# if you change those, please adapt code because these values are hard-coded
 DOCKER_BACK_PORT=8001
 DOCKER_FRONT_PORT=5001
