--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -5,6 +5,9 @@ LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule mime_module modules/mod_mime.so
+LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule unixd_module modules/mod_unixd.so
@@ -26,16 +29,14 @@ ErrorLog /dev/stderr
 LogFormat "%h %l %u %t \"%r\" %>s %b" common
 CustomLog /dev/stdout common
 
-<Directory /capitales>
-  AllowOverride None
-  Require all denied
-</Directory>
+ProxyRequests Off
+ProxyPreserveHost On
 
-Alias "/capitales" "/usr/local/apache2/htdocs/capitales"
+<Proxy *>
+    Require all granted
+</Proxy>
 
-<Directory "/usr/local/apache2/htdocs/capitales">
-  DirectoryIndex index.html
-  Options Indexes FollowSymLinks
-  AllowOverride None
-  Require all granted
-</Directory>
+ProxyPass /capitales http://host.docker.internal:5001/capitales
+ProxyPassReverse /capitales http://host.docker.internal:5001/capitales
+ProxyPass /capitales_back http://host.docker.internal:8001
+ProxyPassReverse /capitales_back http://host.docker.internal:8001
