--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     env_file: ./.env
     ports:
       - "${DOCKER_BACK_PORT}:8000"
+    restart: unless-stopped
 
   capital-front:
     image: front
@@ -15,3 +16,4 @@ services:
       context: ./front/
     ports:
       - "${DOCKER_FRONT_PORT}:80"
+    restart: unless-stopped
